--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Кароч начинаєм</h1>
+    <div class="container">
+        <h1 class="title with_before">Хочешь я стану твоим личным наставником, помогу развиваться и достигать поставленных целей? </h1>
+    </div>
 </body>
 </html>
