--- a/index.html
+++ b/index.html
@@ -9,8 +9,57 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="container">
-        <h1 class="title with_before">Хочешь я стану твоим личным наставником, помогу развиваться и достигать поставленных целей? </h1>
-    </div>
+    <header><div class="logo"><img src="img/logo.svg" alt="logo"></div><p>Инновация отличает лидера от догоняющего</p></header>
+    <section class="mentor">
+        <div class="container">
+            <h1 class="title with_before">Хочешь я стану твоим личным наставником, помогу развиваться и достигать поставленных целей? </h1>
+            <div class="video_and_list">
+                <div class="video_with_btn">
+                    <div class="video_wrapp"><iframe src="https://www.youtube.com/embed/ygoIrQQJVv0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+                    <a href="" class="btn">Да, хочу!</a>
+                </div>
+                <ul class="list">
+                    <li>Ты начнешь эффективнее развиваться</li>
+                    <li>Поставишь цели и начнешь их достигать</li>
+                    <li>Станешь частью сильного окружения на закрытой платформе</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <section class="why_you_need_mentor">
+        <div class="container">
+            <h1 class="title with_before">Почему тебе нужно подключить виртуальный наставник?</h1>
+            <div class="card_list">
+                <div class="card">
+                    <img src="img/why_you_need_mentor/1.svg" alt="why_you_need_mentor">
+                    <p>Ты будешь получать от меня ценные обучающие видео, статьи, бесплатные и платные курсы</p>
+                </div>
+                <div class="card">
+                    <img src="img/why_you_need_mentor/2.svg" alt="why_you_need_mentor">
+                    <p>Каждую неделю я буду делиться с вами своими осознаниями, ценными знаниями и инсайтами</p>
+                </div>
+                <div class="card">
+                    <img src="img/why_you_need_mentor/3.svg" alt="why_you_need_mentor">
+                    <p>Ты получишь возможность многократно расти и развиваться в окружении единомышленников</p>
+                </div>
+                <div class="card">
+                    <img src="img/why_you_need_mentor/4.svg" alt="why_you_need_mentor">
+                    <p>Я буду приглашать тебя на свои мероприятия, которые релевантны твоим целям и направлениям развития</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="are_you_ready">
+        <div class="container">
+            <h1 class="title with_before">Ты готов изменить себя и свою жизнь?</h1>
+            <p class="under_title">Если твой ответ "ДА" - я не просто стану твоим виртуальным наставником, но также открою доступ к уникальной платформе SmartExpert, которую создал для твоего развития!</p>
+        </div>
+    </section>
+    <section class="connect_mentor">
+        <div class="container">
+            <h1 class="title with_before">Ты готов изменить себя и свою жизнь?</h1>
+            <p class="under_title">Если твой ответ "ДА" - я не просто стану твоим виртуальным наставником, но также открою доступ к уникальной платформе SmartExpert, которую создал для твоего развития!</p>
+        </div>
+    </section>
 </body>
 </html>
