desktop done (obrizaty kartinky)

--- a/index1.html
+++ b/index1.html
@@ -8,10 +8,23 @@
     <link rel="stylesheet" href="css/lightslider.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="profile-settings5">
 	<div class="profile-settings5">
 		<div class="container">
-
+			<div class="success-block">
+				<img src="img/check-dark.svg">
+				<span>Виртуальный наставник успешно подключен</span>
+			</div>
+			<h1 class="title with_before margin-sm">Прочитай ниже о возможностях, которые я подготовил для твоего развития.</h1>
+			<div class="about-person">
+				<div class="image">
+					<img src="img/isaac.png">
+				</div>
+				<div class="text">
+					<p class="bigger">Ицхак Пинтосевич</p>
+					Ты завершил настройку своего плана развития и теперь я буду отправлять тебе ценные материалы: статьи, видео, уроки. Я сделаю максимум для твоего развития.
+				</div>
+			</div>
 			<h1 class="title with_before margin-sm">Выбирай, как ты хочешь, чтобы я тебя развивал</h1>
 
 			<div class="two-blocks align-items-center">
