ready first land

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header><div class="logo"><img src="img/logo.svg" alt="logo"></div><p>Инновация отличает лидера от догоняющего</p></header>
+    <header><a href="#" class="logo"><img src="img/logo.svg" alt="logo"></a><p>Инновация отличает лидера от догоняющего</p></header>
     <section class="mentor">
         <div class="container">
             <h1 class="title with_before">Хочешь я стану твоим личным наставником, помогу развиваться и достигать поставленных целей? </h1>
@@ -53,12 +53,51 @@
         <div class="container">
             <h1 class="title with_before">Ты готов изменить себя и свою жизнь?</h1>
             <p class="under_title">Если твой ответ "ДА" - я не просто стану твоим виртуальным наставником, но также открою доступ к уникальной платформе SmartExpert, которую создал для твоего развития!</p>
+            <div class="row_list">
+                <div class="row">
+                    <div class="col">
+                        <div class="slide_bg"><img src="img/are_you_ready/1.jpg" alt="are_you_ready"></div>
+                    </div>
+                    <div class="col col_txt">
+                        <h2>Эффективное обучение и освоение новых навыков </h2>
+                        <p>Я подготовил для тебя уникальные курсы, интересную систему соревновательного обучения, рейтинг участников и возможность выиграть призы за лучшие результаты</p>
+                    </div>
+                </div>
+                <div class="row row_reverse">
+                    <div class="col">
+                        <div class="slide_bg"><img src="img/are_you_ready/2.jpg" alt="are_you_ready"></div>
+                    </div>
+                    <div class="col col_txt">
+                        <h2>Нетворкинг - получай помощь и помогай окружающим </h2>
+                        <p>Находи лучших специалистов, консультируй, получай ускорение в решении поставленных задач. Общайся, дружи, помогай, мотивируй других и получай поддержку в ответ</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <div class="slide_bg"><img src="img/are_you_ready/3.jpg" alt="are_you_ready"></div>
+                    </div>
+                    <div class="col col_txt">
+                        <h2>Качественная поддержка и мотивация коучей</h2>
+                        <p>Профессиональные коучи всегда помогут справиться с ограничениями и барьерами, поддержат и дадут "волшебный пинок" во время прохождения образовательного курса.</p>
+                    </div>
+                </div>
+                <div class="row row_reverse">
+                    <div class="col">
+                        <div class="slide_bg"><img src="img/are_you_ready/4.jpg" alt="are_you_ready"></div>
+                    </div>
+                    <div class="col col_txt">
+                        <h2>Элементы контент маркетинга и создания личного бренда </h2>
+                        <p>Получай возможность писать статьи по своей специализации, делись ими в закрытой социальной сети. И что важно - твоя статья может отобраться для публикации на портале 5СФЕР, где ее увидят более 300 000 тысяч человек. </p>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <section class="connect_mentor">
         <div class="container">
-            <h1 class="title with_before">Ты готов изменить себя и свою жизнь?</h1>
-            <p class="under_title">Если твой ответ "ДА" - я не просто стану твоим виртуальным наставником, но также открою доступ к уникальной платформе SmartExpert, которую создал для твоего развития!</p>
+            <h1 class="title with_before">Я предлагаю тебе начать развиваться, активно обучаться и окружить себя сильными людьми!</h1>
+            <p class="under_title">И я лично готов тебе в этом помочь!</p>
+            <a href="#" class="btn btn-blue">Подключить Наставника</a>
         </div>
     </section>
 </body>
