ready PC second page

--- a/index1.html
+++ b/index1.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="profile-settings5">
+    <header><a href="#" class="logo"><img src="img/logo.svg" alt="logo"></a><p>Инновация отличает лидера от догоняющего</p></header>
 	<div class="profile-settings5">
 		<div class="container">
 			<div class="success-block">
@@ -34,21 +35,26 @@
 					<a href="" class="btn btn-blue">Перейти в виртуальный наставник</a>
 				</div>
 				<div class="image">
-					<img src="img/b-image1.png">
+					<div class="slide_bg"><img src="img/b-image1.jpg" alt="are_you_ready"></div>
 				</div>
 			</div>
 
 
 			<h1 class="title with_before margin-big">Почему я добавил тебя на платформу SmartExpert?</h1>
 			<div class="two-blocks_wrapp">
-				
+
 				<div class="two-blocks align-items-center reverse">
 					<div class="text">
 						<p class="text-title">Обучение</p>
 						Тебя ждут уникальные курсы, интересная система соревновательного обучения, рейтинг участников и возможность выиграть призы за лучшие результаты
 					</div>
 					<div class="image">
-						<img src="img/b-image2.png">
+                        <div class="slide_bg">
+                            <div class="imageSlider">
+    							<img src="img/b-image2.jpg">
+    							<img src="img/b-image2_1.jpg">
+    						</div>
+                        </div>
 					</div>
 				</div>
 
@@ -58,7 +64,7 @@
 						Находи лучших специалистов, консультируй, получай ускорение в решении поставленных задач. Общайся, дружи, помогай, мотивируй других и получай поддержку в ответ
 					</div>
 					<div class="image">
-						<img src="img/b-image3.png">
+						<div class="slide_bg"><img src="img/b-image3.jpg" alt="are_you_ready"></div>
 					</div>
 				</div>
 
@@ -68,7 +74,7 @@
 						Профессиональные коучи всегда помогут справиться с ограничениями и барьерами, поддержат и дадут "волшебный пинок" во время прохождения образовательного курса.
 					</div>
 					<div class="image">
-						<img src="img/b-image2.png">
+						<div class="slide_bg"><img src="img/b-image4.jpg" alt="are_you_ready"></div>
 					</div>
 				</div>
 
@@ -78,10 +84,13 @@
 						Если ты автор - можешь получить возможность создавать и размещать собственные курсы, используя удобный редактор и систему взаимодействия с аудиторией!
 					</div>
 					<div class="image">
-						<div class="imageSlider">
-							<img src="img/b-image3.png">
-							<img src="img/b-image2.png">
-						</div>
+                        <div class="slide_bg">
+                            <div class="imageSlider">
+    							<img src="img/b-image5.jpg">
+    							<img src="img/b-image5_1.jpg">
+    							<img src="img/b-image5_2.jpg">
+    						</div>
+                        </div>
 					</div>
 				</div>
 			</div>
@@ -115,7 +124,7 @@
 	        enableDrag:true,
 	        freeMove:true,
 	        responsive : [],
-	 
+
 	    });
   });
 	</script>
