ready second page

--- a/index1.html
+++ b/index1.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="css/lightslider.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="profile-settings5">
@@ -16,7 +15,7 @@
 				<img src="img/check-dark.svg">
 				<span>Виртуальный наставник успешно подключен</span>
 			</div>
-			<h1 class="title with_before margin-sm">Прочитай ниже о возможностях, которые я подготовил для твоего развития.</h1>
+			<h1 class="title with_before margin-sm title_1">Прочитай ниже о возможностях, которые я подготовил для твоего развития.</h1>
 			<div class="about-person">
 				<div class="image">
 					<img src="img/isaac.png">
