continue 1-st step PC

--- a/steps.html
+++ b/steps.html
@@ -54,23 +54,27 @@
                 </section>
                 <h3>2</h3>
                 <section>
-                    <label for="name">First name *</label>
-                    <input id="name" name="name" type="text" class="required">
-                    <label for="surname">Last name *</label>
-                    <input id="surname" name="surname" type="text" class="required">
-                    <label for="email">Email *</label>
-                    <input id="email" name="email" type="text" class="required email">
-                    <label for="address">Address</label>
-                    <input id="address" name="address" type="text">
-                    <p>(*) Mandatory</p>
+                    <div class="container">
+                        <h1 class="title with_before">Поздравляю, теперь у тебя есть доступ к платформе SmartExpert.</h1>
+                        <a href="#" data-direction="next" class="js-next-step-btn">следующая</a>
+                    </div>
                 </section>
                 <h3>3</h3>
                 <section>
-                    <ul>
-                        <li>Foo</li>
-                        <li>Bar</li>
-                        <li>Foobar</li>
-                    </ul>
+                    <div class="container">
+                        <h1 class="title with_before">Супер! Ты определил основные направления своего развития</h1>
+                        <div class="about-person card">
+                            <div class="image">
+                                <img src="img/isaac.png">
+                            </div>
+                            <div class="text">
+                                <p class="bigger">Подключи наставника в удобном мессенджере</p>
+                                Чтобы я мог делиться с тобой ценными материалами, подключись к одному из предложенных мессенджеров. Это поможет тебе  ничего не упустить!
+                            </div>
+                        </div>
+
+                        <a href="#" data-direction="next" class="js-next-step-btn">следующая</a>
+                    </div>
                 </section>
                 <h3>4</h3>
                 <section>
