3 step ready PC

--- a/steps.html
+++ b/steps.html
@@ -73,6 +73,29 @@
                             </div>
                         </div>
 
+                        <div class="connect_bot card">
+                            <h4 class="title">Подключи один из ботов</h4>
+                            <h5 class="subtitle">Ты всегда сможешь изменить их в личном кабинете</h5>
+                            <div class="bot_block tg">
+                                <div class="img"></div>
+                                <p>Подключить виртуального наставника в Telegram</p>
+                                <a href="#" class="btn">Установить Telegram</a>
+                                <a href="#" class="btn btn-blue">Подключить</a>
+                            </div>
+                            <div class="bot_block vb">
+                                <div class="img"></div>
+                                <p>Подключить виртуального наставника в Viber</p>
+                                <a href="#" class="btn">Установить Viber</a>
+                                <a href="#" class="btn btn-blue">Подключить</a>
+                            </div>
+                            <div class="bot_block fb">
+                                <div class="img"></div>
+                                <p>Подключить виртуального  наставника в Messenger</p>
+                                <a href="#" class="btn">Установить Messenger</a>
+                                <a href="#" class="btn btn-blue">Подключить</a>
+                            </div>
+                        </div>
+
                         <a href="#" data-direction="next" class="js-next-step-btn">следующая</a>
                     </div>
                 </section>
