--- a/steps.html
+++ b/steps.html
@@ -30,7 +30,16 @@
                                 <h3>Тебе осталось зарегистрироваться на платформе SmartExpert, <br> которую я создал специально для твоего развития!</h3>
                                 <div class="registration_bts_wrapp">
                                     <p>Регистрируйся в один клик</p>
-                                    <input id="acceptTerms" name="acceptTerms" type="checkbox" class="required"> <label for="acceptTerms">I agree with the Terms and Conditions.</label>
+                                    <div class="custom-control custom-checkbox">
+                                        <input type="checkbox" class="custom-control-input" id="customCheck1" name="" required>
+                                        <label class="custom-control-label" for="customCheck1">Я согласен с политикой конфиденциальности и условиями оферты
+                                        </label>
+                                    </div>
+                                    <div class="custom-control custom-checkbox">
+                                        <input type="checkbox" class="custom-control-input" id="customCheck2" name="">
+                                        <label class="custom-control-label" for="customCheck2">Я согласен на рассылку (новостей или маркетингового материала)
+                                        </label>
+                                    </div>
                                     <div class="registration_bts">
                                         <a href="#" data-direction="next" class="js-next-step-btn"><img src="img/ic_ggl.svg" alt="ic_ggl">Google</a>
                                         <a href="#" data-direction="next" class="js-next-step-btn"><img src="img/ic_vk.svg" alt="ic_ggl">VKontakte</a>
@@ -57,7 +66,71 @@
                 <section>
                     <div class="container">
                         <h1 class="title with_before">Поздравляю, теперь у тебя есть доступ к платформе SmartExpert.</h1>
-                        <a href="#" data-direction="next" class="js-next-step-btn">следующая</a>
+                        <div class="about-person card">
+                            <div class="image">
+                                <img src="img/isaac.png">
+                            </div>
+                            <div class="text">
+                                <p class="bigger">Помоги мне лучше понять твои интересы и цели:</p>
+                                Выбери направления, в которых ты хочешь развиваться. В соответствии с твоим планом развития, я буду отправлять тебе статьи, курсы, видео и приглашения на события от меня и моих проверенных экспертов.
+                            </div>
+                        </div>
+                        <div class="choose_tags connect_bot card">
+                            <h4 class="title">Выбери теги по направленим, в которых ты хочешь развиваться</h4>
+                            <h5 class="subtitle">Минимальное количество тегов 3, максимальное 15. Ты всегда сможешь изменить их в личном кабинете</h5>
+                            <div class="selected_tags">
+                                <p class="title">Выбрано тегов: <span>0</span></p>
+                                <ul>
+                                    <li class="empty"></li>
+                                    <li class="empty"></li>
+                                    <li class="empty"></li>
+                                    <li class="empty"></li>
+                                    <li class="empty"></li>
+                                </ul>
+                            </div>
+                            <div class="select_topic">
+                                <p class="title">Выбери направление</p>
+                                <div class="select_wrapp">
+                                    <select name="select_topic" id="select_topic">
+                                        <option value="Личностный рост">Личностный рост</option>
+                                        <option value="Личностный рост 1">Личностный рост 1</option>
+                                        <option value="Личностный рост 2">Личностный рост 2</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="select_tags">
+                                <p class="title">Выберите теги по направлению</p>
+                                <ul>
+                                    <li>Успех</li>
+                                    <li>Дисциплина</li>
+                                    <li>Мышление</li>
+                                    <li>Психология</li>
+                                    <li>Благодарность</li>
+                                    <li>Эффективность</li>
+                                    <li>Творчество</li>
+                                    <li>Решительность</li>
+                                    <li>Энергия</li>
+                                    <li>Лайф коучинг</li>
+                                    <li>Осознаность</li>
+                                    <li>Продуктивность</li>
+                                    <li>Цель</li>
+                                    <li>Медитации</li>
+                                    <li>Счастье</li>
+                                    <li>Организация</li>
+                                    <li>Привычки</li>
+                                    <li>Концентрация</li>
+                                    <li>Лидерство</li>
+                                    <li>Общение</li>
+                                    <li>Позитивная психология</li>
+                                    <li>Креативность</li>
+                                    <li>Самооценка</li>
+                                    <li>Увереность</li>
+                                    <li>Прокрастинация</li>
+                                </ul>
+                                <div class="hr"></div>
+                                <a href="#" data-direction="next" class="js-next-step-btn">Сохранить и продолжить</a>
+                            </div>
+                        </div>
                     </div>
                 </section>
                 <h3>3</h3>
@@ -70,7 +143,7 @@
                             </div>
                             <div class="text">
                                 <p class="bigger">Подключи наставника в удобном мессенджере</p>
-                                Чтобы я мог делиться с тобой ценными материалами, подключись к одному из предложенных мессенджеров. Это поможет тебе  ничего не упустить!
+                                Чтобы я мог делиться с тобой ценными материалами, подключись к одному из предложенных мессенджеров. Это поможет тебе ничего не упустить!
                             </div>
                         </div>
 
@@ -91,7 +164,7 @@
                             </div>
                             <div class="bot_block fb">
                                 <div class="img"></div>
-                                <p>Подключить виртуального  наставника в Messenger</p>
+                                <p>Подключить виртуального наставника в Messenger</p>
                                 <a href="#" class="btn">Установить Messenger</a>
                                 <a class="btn btn-blue" data-direction="next" class="js-next-step-btn">Подключить</a>
                             </div>
@@ -111,7 +184,7 @@
                             </div>
                             <div class="text">
                                 <p class="bigger">Подключи наставника в удобном мессенджере</p>
-                                Чтобы я мог делиться с тобой ценными материалами, подключись к одному из предложенных мессенджеров. Это поможет тебе  ничего не упустить!
+                                Чтобы я мог делиться с тобой ценными материалами, подключись к одному из предложенных мессенджеров. Это поможет тебе ничего не упустить!
                             </div>
                         </div>
 
@@ -122,23 +195,20 @@
                                 <li>
                                     <label>
                                         Цель №<span>1</span>
-                                        <input type="text" placeholder="Введите сюда свою цель" required>
+                                        <input type="text" placeholder="Введите сюда свою цель" name="gl1" required>
                                     </label>
                                 </li>
                                 <li>
                                     <label>
                                         Цель №<span>2</span>
-                                        <input type="text" placeholder="Введите сюда свою цель" required>
+                                        <input type="text" placeholder="Введите сюда свою цель" name="gl2" required>
                                     </label>
                                 </li>
                             </ul>
                             <span class="btn btn_add_goal js_add_goal">Добавить цель</span>
                             <div class="hr"></div>
-                            <a href="" class="btn btn-blue">Сохранить и продолжить</a>
+                            <button href="" class="btn btn-blue js-finish-step-btn">Сохранить и продолжить</button>
                         </div>
-
-                        <a href="#" data-direction="next" class="js-next-step-btn">следующая</a><br><br>
-
                     </div>
                 </section>
             </div>
