--- a/steps.html
+++ b/steps.html
@@ -78,7 +78,7 @@
                         <div class="choose_tags connect_bot card">
                             <h4 class="title">Выбери теги по направленим, в которых ты хочешь развиваться</h4>
                             <h5 class="subtitle">Минимальное количество тегов 3, максимальное 15. Ты всегда сможешь изменить их в личном кабинете</h5>
-                            <div class="selected_tags">
+                            <div class="selected_tags js_selected_tags">
                                 <p class="title">Выбрано тегов: <span>0</span></p>
                                 <ul>
                                     <li class="empty"></li>
@@ -98,7 +98,7 @@
                                     </select>
                                 </div>
                             </div>
-                            <div class="select_tags">
+                            <div class="select_tags js_select_tags">
                                 <p class="title">Выберите теги по направлению</p>
                                 <ul>
                                     <li>Успех</li>
@@ -128,7 +128,7 @@
                                     <li>Прокрастинация</li>
                                 </ul>
                                 <div class="hr"></div>
-                                <a href="#" data-direction="next" class="js-next-step-btn">Сохранить и продолжить</a>
+                                <a href="#" data-direction="next" class="save_btn disable js-next-step-btn">Сохранить и продолжить</a>
                             </div>
                         </div>
                     </div>
