steps mobile finish

--- a/steps.html
+++ b/steps.html
@@ -154,24 +154,21 @@
                                 <div class="img"></div>
                                 <p>Подключить виртуального наставника в Telegram</p>
                                 <a href="#" class="btn">Установить Telegram</a>
-                                <a href="#" class="btn btn-blue" data-direction="next" class="js-next-step-btn">Подключить</a>
+                                <a href="#" class="next-step-btn js-next-step-btn">Подключить</a>
                             </div>
                             <div class="bot_block vb">
                                 <div class="img"></div>
                                 <p>Подключить виртуального наставника в Viber</p>
                                 <a href="#" class="btn">Установить Viber</a>
-                                <a href="#" class="btn btn-blue" data-direction="next" class="js-next-step-btn">Подключить</a>
+                                <a href="#" class="next-step-btn js-next-step-btn">Подключить</a>
                             </div>
                             <div class="bot_block fb">
                                 <div class="img"></div>
                                 <p>Подключить виртуального наставника в Messenger</p>
                                 <a href="#" class="btn">Установить Messenger</a>
-                                <a class="btn btn-blue" data-direction="next" class="js-next-step-btn">Подключить</a>
+                                <a href="#" class="next-step-btn js-next-step-btn">Подключить</a>
                             </div>
                         </div>
-
-                        <a href="#" data-direction="next" class="js-next-step-btn">следующая</a><br><br>
-
                     </div>
                 </section>
                 <h3>4</h3>
