--- a/modals.html
+++ b/modals.html
@@ -8,13 +8,15 @@
     <title>Document</title>
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="modals_body">
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi repudiandae sunt eius praesentium quae quis, provident rem cum veniam odio deserunt inventore modi, tempore et nobis ducimus iste, quos amet officiis nisi beatae. Repudiandae molestiae itaque explicabo incidunt architecto suscipit autem ipsum harum cum veritatis, aspernatur quaerat natus eos laboriosam similique non maiores ut vitae deleniti quia at modi, aperiam voluptas sint! Eius aliquam facere fuga beatae eos veritatis in pariatur ex quae rem quo, voluptas sed, minima praesentium earum voluptate optio asperiores architecto repudiandae quas quibusdam dicta rerum. Omnis laudantium libero facilis aspernatur, assumenda quisquam voluptatibus reiciendis, magni adipisci eum autem quo, perferendis ipsum? Eaque hic dicta, ab rerum expedita, vitae iure. Mollitia ducimus, voluptates fuga nesciunt reprehenderit ullam ex atque necessitatibus consequatur. Ratione veniam saepe, suscipit aperiam itaque eos. Praesentium at mollitia illum, aperiam omnis, possimus quae porro repellendus doloremque, itaque, explicabo suscipit. Aspernatur ex quas rerum, iure molestias beatae consequuntur pariatur ullam aliquid facere, sunt laudantium nemo ipsa, adipisci hic. Aliquid nesciunt maiores debitis obcaecati, suscipit neque cupiditate natus sit beatae veniam, molestiae similique, quidem a tenetur id fugit maxime laboriosam, officia eum laborum repudiandae tempore. Architecto praesentium, animi, harum repellendus quibusdam nihil magnam quo deserunt dignissimos.</p>
 
-
-    <div id="modal_leadform" class="modal" tabindex="-1" role="dialog">
+    <!-- клас .show для открытия модалки -->
+    <div id="modal_leadform" class="modal show" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -106,34 +108,7 @@
                                 <button class="btn">Отмена</button>
                             </div>
                         </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <br><br><br>
-
-
-    <div id="modal_leadform" class="modal" tabindex="-1" role="dialog">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">Добавить лидформу</h5>
-                    <button type="button" class="close">
-                        <span class="icon-close"></span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <div class="tab">
-                        <nav class="tab-nav">
-                            <ul>
-                                <li><a href="#">Создать лидформу</a></li>
-                                <li class="active"><a href="#">Выбрать существующую </a></li>
-                            </ul>
-                        </nav>
-                        <div class="tab-pane second active">
+                        <div class="tab-pane second">
                             <span class="title">Выберите лидформу для публикации в статью</span>
                             <div class="leadform_list">
                                 <div class="card_outline">
@@ -180,6 +155,10 @@
             </div>
         </div>
     </div>
+
+
+    <br><br><br>
+
 
 
 
