continue newland. 4 sections

--- a/newland.html
+++ b/newland.html
@@ -45,9 +45,9 @@
     </nav>
     <!-- sec_1 -->
     <section class="sec sec_1">
-        <img alt="" class="abs_pic circle" src="img/common/circle.svg">
-        <img alt="" class="abs_pic line" src="img/common/line.svg">
-        <img alt="" class="abs_pic line-light" src="img/common/line.svg">
+        <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
+        <img alt="" class="abs_pic line" src="img/abs_pic/line.svg">
+        <img alt="" class="abs_pic line-light" src="img/abs_pic/line.svg">
         <div class="container">
             <div class="row">
                 <div class="col-md-8">
@@ -65,21 +65,81 @@
         </div>
     </section>
     <!-- / sec_1 -->
+    <!-- sec_2 -->
     <section class="sec sec_2">
         <div class="container">
-            <div class="row"></div>
+            <div class="row flex-nowrap">
+                <div class="col">
+                    <div class="media">
+                        <div class="icon icon_1"></div>
+                        <p>Платформа для онлайн-обучения</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="media">
+                        <div class="icon icon_2"></div>
+                        <p>Инструменты маркетинга</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="media">
+                        <div class="icon icon_3"></div>
+                        <p>Глобальный <br> поиск экспертов</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="media">
+                        <div class="icon icon_4"></div>
+                        <p>Деловая <br> социальная сеть</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="media">
+                        <div class="icon icon_5"></div>
+                        <p>Продвижение личного бренда</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
+    <!-- / sec_2 -->
+    <!-- sec_3 -->
     <section class="sec sec_3">
+        <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
+        <img alt="" class="abs_pic circle_orange" src="img/abs_pic/circle_orange.svg">
+        <img alt="" class="abs_pic stone" src="img/abs_pic/stone.svg">
+        <img alt="" class="abs_pic dubl_line vertical" src="img/abs_pic/dubl_line.svg">
         <div class="container">
-            <div class="row"></div>
+            <div class="row align-items-center justify-content-between">
+                <div class="col-md-7">
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/vMW2jl241QY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="col-md-5">
+                    <h2>Продвигай личный бренд, содавай курсы и автоматизируй продажи!</h2>
+                    <p>SmartExpert - это полный набор инструментов для создания образовательных проектов, автоматизации продаж и продижения личного бренда.</p>
+                    <a href="#" class="btn btn-primary">Посмотреть обзор</a>
+                </div>
+            </div>
         </div>
     </section>
+    <!-- / sec_3 -->
+    <!-- sec_4 -->
     <section class="sec sec_4">
         <div class="container">
-            <div class="row"></div>
+            <div class="row">
+                <div class="col-12">
+                    <div class="sec_title">
+                        <img src="img/sec_4/title_label.svg" alt="title_label">
+                        <h2>Наши преимущества</h2>
+                        <p>Вы получаете весь набор возможностей в одном месте:</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
+    <!-- / sec_4 -->
     <section class="sec sec_5">
         <div class="container">
             <div class="row"></div>
