--- a/newland.html
+++ b/newland.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <!-- fixed header -->
     <nav class="navbar navbar-expand-md fixed-top">
         <a class="navbar-brand" href="#"><img src="img/logo.svg" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,6 +44,7 @@
             </form>
         </div>
     </nav>
+    <!-- / fixed header -->
     <!-- sec_1 -->
     <section class="sec sec_1">
         <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
@@ -128,6 +130,11 @@
     <!-- sec_4 -->
     <section class="sec sec_4">
         <div class="container">
+            <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
+            <img alt="" class="abs_pic circle_orange" src="img/abs_pic/circle_orange.svg">
+            <img alt="" class="abs_pic dubl_line vertical" src="img/abs_pic/dubl_line.svg">
+            <img alt="" class="abs_pic dubl_line" src="img/abs_pic/dubl_line.svg">
+            <img alt="" class="abs_pic stone_orange" src="img/abs_pic/stone_orange.svg">
             <div class="row">
                 <div class="col-12">
                     <div class="sec_title">
@@ -137,17 +144,119 @@
                     </div>
                 </div>
             </div>
+            <div class="row justify-content-center">
+                <div class="col-4">
+                    <div class="media">
+                        <div class="icon"></div>
+                        <p>Продвижение <br> личного бренда</p>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="media">
+                        <div class="icon"></div>
+                        <p>Контент-маркетинг для <br> генерации трафика</p>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="media">
+                        <div class="icon"></div>
+                        <p>Создание автоворонок <br> продаж</p>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="media">
+                        <div class="icon"></div>
+                        <p>Управление <br> клиентами в CRM</p>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="media">
+                        <div class="icon"></div>
+                        <p>Удобный <br> конструктор курсов</p>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="media">
+                        <div class="icon"></div>
+                        <p>Создание сообщества с <br> помощью встроенной <br> социальной сети</p>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="media">
+                        <div class="icon"></div>
+                        <p>Создание различных <br> моделей монетизации</p>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="media">
+                        <div class="icon"></div>
+                        <p>Размещение курсов в <br> магазине знаний</p>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="media">
+                        <div class="icon"></div>
+                        <p>Передача курса Smart Expert <br> для продюсирования</p>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="media">
+                        <div class="icon"></div>
+                        <p>Возможность привлечь от <br> $5k до $50k инвестиций на <br> развитие своего проекта</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <!-- / sec_4 -->
+    <!-- sec_5 -->
     <section class="sec sec_5">
         <div class="container">
-            <div class="row"></div>
+            <div class="row">
+                <div class="col-12">
+                    <div class="sec_title">
+                        <img src="img/sec_4/title_label.svg" alt="title_label">
+                        <h2>Продюсируем звёзд, блогеров и лидеров мнений - под ключ!</h2>
+                        <p>Делаем все сами под ключ!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row align-items-center justify-content-between">
+                <div class="col-md-5">
+                    <div class="media">
+                        <div class="icon icon_1"><img src="img/sec_5/icon_1.svg" alt="icon_1"></div>
+                        <p>Создадим и упакуем <br> образовательный <br> продукт</p>
+                    </div>
+                    <div class="media">
+                        <div class="icon icon_2"><img src="img/sec_5/icon_2.svg" alt="icon_2"></div>
+                        <p>Настроим весь маркетинг <br> и продвинем продукт на <br> Вашу аудиторию </p>
+                    </div>
+                    <div class="media">
+                        <div class="icon icon_3"><img src="img/sec_5/icon_3.svg" alt="icon_3"></div>
+                        <p>Организуем продажи <br> и  обеспечим Вас <br> прибылью</p>
+                    </div>
+                </div>
+                <div class="col-md-7">
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/vMW2jl241QY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
+    <!-- / sec_5 -->
     <section class="sec_6">
         <div class="container">
-            <div class="row"></div>
+            <h2 class="second_title text-center">Наши звезды</h2>
+            <div class="row">
+                <div class="col-4">
+                    <div class="media">
+                        <div class="icon"></div>
+                        <h3>Константин Лашкевич</h3>
+                        <p>Продвижение <br> личного бренда</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <section class="sec sec_7">
